data/derived/comb/progs/unify/prog3530.ml.out
Characters 196-200:
  let (bar, res) = List.fold_left f base args in
                                    ^^^^
Error: This expression has type 'a list * 'b list
       but an expression was expected of type int
